# onboarding_lakecrest_clean

./: .gitignore  .rewrite.txt  ALL_FIXES_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_FLOW_REVIEW.md  DATABASE_ANALYSIS_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DIRECT_DEPOSIT_ANALYSIS_AND_FIXES.md  DIRECT_DEPOSIT_BEFORE_AFTER.md  DIRECT_DEPOSIT_COMPREHENSIVE_FIX_PLAN.md  DIRECT_DEPOSIT_MERGE_FIX_COMPLETE.md  DIRECT_DEPOSIT_STORAGE_OPTIMIZATION_PLAN.md  FINAL_COMPREHENSIVE_REVIEW.md  HEALTH_INSURANCE_EDIT_BUTTON_FIX.md  HEALTH_INSURANCE_FIX_SUMMARY.md  HEALTH_INSURANCE_ISSUES_AND_FIXES.md  HUMAN_TRAFFICKING_FIXES.md  HUMAN_TRAFFICKING_REHYDRATION_ANALYSIS.md  HUMAN_TRAFFICKING_REHYDRATION_FIXES_APPLIED.md  HUMAN_TRAFFICKING_SAVE_AND_REHYDRATION_FIXES.md  HUMAN_TRAFFICKING_SIGNATURE_AND_PREVIEW_FIXES.md  I18N_VALIDATION_FIX_REPORT.md  MANAGER_REVIEW_IMPLEMENTATION_PROGRESS.md  NAVIGATION_STANDARDIZATION_SUMMARY.md  ONBOARDING_FLOW_UX_ISSUES_REPORT.md  PDF_PREVIEW_AND_STORAGE_PATH_FIXES.md  PERFORMANCE_FIXES_IMPLEMENTED.md  PRODUCTION_URLS.md  SOLID_PLAN_SUMMARY.md  SPANISH_APPLICATION_FIX_FINAL_REPORT.md  SPANISH_SUBMISSION_FIX_REPORT.md  STEP_TRANSITION_PERFORMANCE_ISSUES.md  SUPABASE_SERVICE_KEY_FIX.md  TEST_COVERAGE_REPORT.md  THREE_CRITICAL_FIXES_COMPLETE.md  VOIDED_CHECK_DATABASE_ISSUE.md  (+34 more)
backend/: .gitignore  .heroku_trigger  API_ANALYTICS_DOCS.md  APPROVAL_WORKFLOW_SUMMARY.md  BASELINE_SUMMARY.md  BASELINE_TEST_REPORT.md  CHECKPOINT_ALPHA_REPORT.md  CHECKPOINT_BETA_REPORT.md  OPENAI_SETUP.md  (+216 more)
(+865 files in other folders)
